--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Tuhin Dhar Portfolio</title>
   <meta name="description" content="Portfolio of Tuhin Dhar" />
-
+  <link href="./assets/svg/favicon.ico" rel="icon">
   <link rel="stylesheet" href="css/style.css" />
-
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap" rel="stylesheet" />
